--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Eren Yusuf Duran",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -17,8 +18,10 @@
     "express-rate-limit": "^6.5.1",
     "helmet": "^5.1.1",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.8.0",
+    "mongoose": "^6.4.7",
     "morgan": "^1.10.0",
-    "pg": "^8.7.3",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
